src/App.css
.App {
  text-align: center;
  width: 90vw;
  margin-left: 5vw; 
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

h1 {
  font-size: 76px;
}

h3 {
  width: 70vw;
  margin: 4vh auto;
  text-align: left;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#splash-map {
  width: 80vw;

}

.section {
  margin: 15vh 0;
}

.titles {
  z-index: 3;
  text-align: center;
  width: 35vw;
  margin: 0 20vw;
  margin-top: 135px;
  margin-bottom: -500px;
}

.flexy {
  display: flex;

}
.icons {
  width: 150px;
}

.intro-icons {
  width: 150px;
  margin: 0 auto;
}

.pink {
  padding: 400px;
  stroke-dasharray: 5 10 30 10;
  stroke-dashoffset: 5;
}

#mapid { height: 380px; }

.prison-compare {
  margin: 0 auto;
}

.pie {
  width: 120px;
  background: #d7d9dd;
  border-radius: 50%;
}

.pie circle {
  fill: none;
  stroke: DeepPink;
  stroke-width: 32;
  animation: rotate 1.5s ease-in;
}

#check {
  stroke-dasharray: 300;
  animation: dash 2s linear infinite;
}

@keyframes dash {
  to {
    stroke-dashoffset: 600;
  }
}

